--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>redis-lock</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>redis-lock</name>
-    <description>locak for springboot</description>
+    <description>lock for springboot</description>
 
     <properties>
         <java.version>1.8</java.version>
